--- a/pages/index/detail.wxml
+++ b/pages/index/detail.wxml
@@ -3,6 +3,16 @@
   <view class="title">
     {{movie.title}}
   </view>
+  <view class="title">Products</view>
+  <view class="list">
+    <block wx:for="{{products}}" wx:for-item="product" wx:key="{{product.id}}">
+      <view class="item" bindtap="placeOrder" id="{{product.id}}">
+        
+        <text class="number">¥{{product.price}}</text>
+        <text class="name">{{product.title}}</text>
+      </view>
+    </block>
+  </view>
   <scroll-view scroll-y="{{true}}" enable-flex="{{true}}" scroll-into-view="{{scrollInto}}" scroll-with-animation="{{true}}" style="height: 800rpx" class="list">
     <view wx:for="{{items}}" id="item-{{it.id}}" wx:for-item="it" wx:key="id" wx:for-index="idx" class="item">
       <view class="name">
